CodeAgainstCancer/static/css/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
  transition: 0.3s all ease-in-out;
}

html {
  scroll-behavior: smooth;
  background-color: #033241;
}

/* reset styles  */
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover,
a:focus {
  text-decoration: none;
  color: inherit;
  color: green;
}

/* styles for forms  */
.login {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #c8c0c0;
}

.shadow-wrap {
  border-radius: 5px;
  padding: 25px;
  background-color: #f0f2fb;
}

.form-wrap {
  background-color: #fff;
  padding: 70px;
}

.form-wrap form * {
  display: block;
  width: 100%;
}
.form-wrap form label {
  margin-bottom: 5px;
  font-size: 14px;
  font-weight: 700;
  line-height: 26px;
}
.form-wrap form input {
  padding: 12px 20px;
  border-radius: 5px;
  border: 1px solid #dae1f5;
  background: #fff;
  color: #545d7a;
}
#id_username {
  margin-bottom: 20px;
}
.form-wrap button {
  border-radius: 5px;
  background: #10182f;
  color: #fff;
  cursor: pointer;
  text-align: center;
  font-size: 16px;
  padding: 12px 68px;
  font-weight: 700;
  border: 1px solid transparent;
  margin-top: 30px;
  line-height: 26px;
}

.form-wrap button:hover {
  background-color: #fff;
  color: #10182f;
  border-color: #10182f;
}

.signup-link {
  color: #10182f;
  font-size: 15px;
  margin-top: 20px;
  text-align: center;
  line-height: 25px;
  display: block;
  text-decoration: none;
}

.signup-link:hover {
  text-decoration: underline;
}
.form-wrap button:hover {
  background-color: #fff;
  color: #10182f;
  border-color: #10182f;
}

.errorlist {
  color: #ff4d4d;
}
/* end of styles for forms  */

/* beginning of navbar styles  */

.navbar {
  background-color: #033241;
  z-index: 1000000000;
}

.navbar-brand,
.nav-link {
  color: white;
  transition: all 0.3s ease-in-out;
}

.nav-link:hover,
.navbar-brand:hover {
  color: white;
  background: linear-gradient(
    to right,
    #add8e6 20%,
    #ff69b4 40%,
    #6192a2 50%,
    #ee60a7 70%,
    #add8e6 80%
  );
  background-size: 300% 100%;
  animation: gradient 5s ease-in-out infinite;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.btn-container {
  display: flex;
  align-items: center;
  gap: 5px;
}

.logout-button {
  border: 1px solid #add8e6;
  color: #add8e6;
  background-color: transparent;
  padding: 0.5rem 1rem;
  border-radius: 50px;
  text-transform: capitalize;
}

.logout-button:hover {
  background-color: #add8e6;
  color: #033241;
}

.login-button {
  border: 1px solid #add8e6;
  color: #add8e6;
  background-color: transparent;
  padding: 0.5rem 1rem;
  border-radius: 50px;
  text-transform: capitalize;
}

.login-button:hover {
  background-color: #add8e6;
  color: #033241;
}

.signup-button {
  border: 1px solid #add8e6;
  color: white;
  background-color: #add8e6;
  padding: 0.5rem 1rem;
  border-radius: 50px;
  text-transform: capitalize;
}

.signup-button:hover {
  color: #033241;
}
/* end of navbar styles  */

.small-input {
  width: 50%;
  font-size: 12px;
}
.sidebar {
  height: 100%;
  width: 50px;
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  background-color: #033241;
  overflow-x: hidden;
  transition: width 0.35s ease-in-out;
  padding-top: 60px;
  white-space: nowrap;
}

.sidebar.expanded {
  width: 250px;
}

.sidebar a {
  padding: 8px 8px 8px 16px;
  text-decoration: none;
  font-size: 20px;
  color: #f1f1f1;
  display: block;
  transition: 0.2s;
}

.sidebar a .icon-text {
  display: none; /* Hide text initially */
}

.sidebar:hover a .icon-text {
  display: inline-block; /* Show text on hover */
  text-decoration: underline;
  text-decoration-color: #ff69b4;
}

.sidebar a:hover {
  color: rgb(175, 174, 184);
}

.material-icons,
.icon-text {
  vertical-align: middle;
}

.sidebar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.material-icons {
  padding-bottom: 3px;
  margin-right: 30px;
}

.sidebar:hover #main {
  margin-left: 250px;
}

#main {
  transition: margin-left 0.5s;
  padding: 16px;
  margin-left: 50px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidebar {
    padding-top: 15px;
  }
  .sidebar a {
    font-size: 18px;
  }
}

/* Content styles */
.content {
  margin-left: 0;
  padding: 20px;
  width: 100%;
  transition: margin-left 0.5s;
}

.bg-lightblue {
  background-color: #add8e6 !important;
}

.footer .btn-primary {
  background-color: #007bff;
  border-color: #007bff;
}

.footer-custom {
  height: 80px;
}

/* Styling for the Google Login Button */
.btn-google {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background-color: #4285f4;
  color: white;
  border: 2px solid #4285f4;
  padding: 10px 20px;
  border-radius: 5px;
  text-decoration: none;
  font-size: 16px;
  font-weight: 500;
  transition: background-color 0.3s, border-color 0.3s;
  margin-top: 10px; /* Adjust this value to bring the button down */
}

.btn-google:hover {
  background-color: white;
  color: #4285f4;
  border-color: #357ae8;
}

.btn-google img {
  margin-right: 10px;
}

.reset-anchor {
  text-decoration: none !important;
  color: inherit !important;
  border: none;
  padding: 0;
  margin: 0;
  background: none;
}

.margin-bottom {
  margin-bottom: 150px;
}

.about-img {
  width: 480px;
  height: 250px;
  object-fit: cover;
  display: block;
  margin: 0 auto;
}

.video-thumbnail-img {
  width: auto;
  height: 200px;
  object-fit: cover;
  width: auto;
  height: 200px;
  object-fit: cover;
}

/* styles to make the footer sticky */
main {
  min-height: calc(100dvh - 140px);
  background-color: white;
}

/* styles for footer  */
footer {
  background-color: #033241;
  font-size: 16px;
}

.footer-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 20px;
  max-width: 1000px;
  margin: 0 auto;
  padding: 20px 20px;
}

.footer-header {
  color: white;
  padding: 0;
  margin: 0;
}

.footer-header h2 {
  font-size: 1.2rem;
  margin: 0;
}

.footer-list {
  color: #b3b3b3;
}

.footer-list a:hover {
  color: white;
}

.footer-bar {
  background-color: #ff3092;
  height: 3px;
  width: 30%;
  margin-bottom: 10px;
}

.footer-logo {
  margin: 0 auto;
}

.footer-socials {
  display: flex;
  /* justify-content: center; */
  align-items: center;
  font-size: 2rem;
  gap: 1rem;
}

.footer-socials a:hover {
  color: white;
}

.gradient-text {
  background: linear-gradient(-45deg, #add8e6, #ff69b4, #add8e6, #ee60a7);
  background-size: 200% 200%;
  animation: gradient 15s ease infinite;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.gradient-bg {
  background: linear-gradient(-45deg, #add8e6, #ff69b4, #add8e6, #c71585);
  background-size: 400% 400%;
  animation: gradient 15s ease infinite;
  min-height: calc(100dvh - 140px);
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

/* end of footer styles  */

/* styles for homepage  */
.carousel-item {
  max-height: 60dvh;
}

.home-img {
  max-width: 400px;
  height: auto;
}
/* end of styles for homepage */

/* styles for profile page  */
.profile {
  background-color: white;
  height: 100%;
  width: 100%;
  border: 1px solid #f1f1f1;
  border-radius: 10px;
}

.profile p {
  color: #4f4f4f;
  font-size: 1rem;
}

.profile h2 {
  font-weight: bold;
}

.profile h3 {
  font-size: 1.5rem;
  font-weight: normal;
}

.profile h4 {
  color: #4f4f4f;
  font-weight: lighter;
  font-size: 1rem;
}

/* .profile img {
  width: 250px;
  height: 250px;
  border-radius: 50%;
} */

/* Gradient border container */
.gradient-img {
  position: relative;
  display: inline-block;
  border-radius: 50%;
  padding: 3px;
  background: linear-gradient(-45deg, #add8e6, #ff69b4, #add8e6, #c71585);
  background-size: 400% 400%;
  animation: gradient 15s ease infinite;
  box-sizing: border-box;
}

/* Profile image */
.profile-pic {
  display: block;
  width: 100%;
  height: auto;
  border-radius: 50%;
  background-color: white;
  z-index: 1;
}

.edit-button {
  display: inline-block;
  background: linear-gradient(-45deg, #add8e6, #ff69b4, #add8e6, #c71585);
  background-size: 400% 400%;
  animation: gradient 15s ease infinite;
  color: white;
  border: 2px solid transparent;
  padding: 10px 20px;
  border-radius: 50px;
  min-width: 260px;
}

/* on hover animate faster  */
.edit-button:hover {
  border: 2px solid silver;
  color: silver;
  animation: gradient 5s ease infinite;
}

/* end of styles for profile page */

/* donation page styles  */
.donation-img {
  clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
  width: 100%;
  height: auto;
}
/* end of donation page styles  */

/* styles for the resources page  */
.pubmed-link {
  color: #4cbee3;
}

.pubmed-link:hover {
  color: #ff69b4;
}

ul.forums {
  list-style-type: disc;
  padding: 0 20px;
}

ul.forums a:hover {
  color: #ff69b4;
}
/* end of styles for the resources page */

/* styles for the about page  */
.mission {
  color: #4f4f4f;
  font-size: 2rem;
  font-weight: bolder;
}

/* for smaller screens  */
@media (max-width: 768px) {
  .mission {
    font-size: 1.5rem;
  }
}

/* end of styles for the about page */

/* Styling for forum */
.threads-container {
  text-align: center;
  padding-bottom: 60px;
  margin-top: 20px;
  color: white;
}

/* Title Styling */
.threads-title {
  font-size: 36px;
  font-weight: bold;
  margin-bottom: 30px;
  color: #36788e;
  text-shadow: 0 0 10px #36788e, 0 0 20px #3495b5; /* Glow effect */
}

/* Button Styling */
.create-thread-btn {
  background: linear-gradient(135deg, #033241, #0d7377);
  color: white;
  padding: 10px 20px;
  border-radius: 5px;
  text-decoration: none;
  font-size: 16px;
  margin-bottom: 30px;
  display: inline-block;
}

/* Thread List */
.thread-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  margin-top: 30px;
}

/* Individual Thread Item */
.thread-item {
  width: 60%;
  background: linear-gradient(135deg, #333, #444);
  border-radius: 10px;
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5), 0 0 10px rgba(0, 230, 255, 0.3);
  transition: box-shadow 0.3s ease;
}

.thread-item:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.7), 0 0 20px rgba(0, 230, 255, 0.6); /* Glow hover */
}

/* Thread Title Styling */
.thread-title {
  font-size: 24px;
  color: #36788e;
  text-decoration: none;
  font-weight: bold;
}

/* Thread Date Styling */
.thread-date {
  color: #bbbbbb;
  font-size: 14px;
  margin-top: 10px;
}

.thread-item {
  padding: 20px;
  background-color: #333;
  border-radius: 10px;
  margin-bottom: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.delete-thread-form {
  position: absolute !important;
  right: 10px !important;
  bottom: 10px !important;
}

.delete-thread-btn {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.2s ease;
}

.delete-thread-btn:hover {
  transform: scale(1.1); /* Slight hover animation */
}

.delete-icon {
  width: 20px;
  height: 20px;
}

